--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,11 @@
 /* responsive.css  */
 
 
-
+/* 500 to 960 pixels */
+@media screen and (min-width: 31.25em) {
+nav ul li {
+  width: 33%
+  }
+}
 
 
