--- a/responsive.css
+++ b/responsive.css
@@ -12,6 +12,12 @@ nav ul li {
   #col2 {
     width: 43%;
   }
+  #col3 {
+    clear: both;
+    float: none:
+      width: 90%
+      margin: 0 1em 1.5em;
+  }
 }
 
 
