--- a/responsive.css
+++ b/responsive.css
@@ -14,8 +14,8 @@ nav ul li {
   }
   #col3 {
     clear: both;
-    float: none:
-      width: 90%
+    float: none;
+      width: 90%;
       margin: 0 1em 1.5em;
   }
 }
